--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,7 @@
       "program": "${workspaceFolder}/repro.py",
       "console": "integratedTerminal",
       "justMyCode": false,
-      // "env": {
-      //   "PYTORCH_ENABLE_MPS_FALLBACK": "1"
-      // }
+      "args": ["--half_precision_float", "false", "--backend_type", "cpu"]
     }
   ]
 }
